--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of declusteringr is to ...
+The goal of declusteringr is to declustering spatial data.
 
 ## Installation
 
