--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,10 @@ plot(x$geometry, col = unlist(x$received_weights))
 `gridWeighted` is adding columns row.id - the cell's number, col.id - the point's number, received_weights - the weight of each cell and lengths - amounts of each points in cell. `gridWeighted` does not change amount of features.
 Weights are calculated according to this pattern:
 
+$$ {w}'_j = \frac{\frac{1}{n_i}}{number\;of\;cells\;with\;data}\cdot n $$
 
+where $ n_i $ is the number of samples in the cell in which sample $ j $ is located and $ n $ is the total number cells
+with samples.
 
 This is basic example of random declustering:
 
