--- a/README.Rmd
+++ b/README.Rmd
@@ -33,8 +33,8 @@ This is a basic example of cell declustering:
 
 ```{r example}
 library(declusteringr)
-
-x = gridWeighted(spatial_object = sf::st_read("inst/points/punkty4.shp"), cellsize = 0.09)
+points4 = sf::st_read(system.file("points/punkty4.shp", package = "declusteringr"))
+x = gridWeighted(spatial_object = points4, cellsize = 0.09)
 ```
 Plot input data and weighted points:
 ```{r}
@@ -54,7 +54,7 @@ with samples.
 This is basic example of random declustering:
 
 ```{r}
-y = gridRandom(spatial_object = sf::st_read('inst/points/punkty4.shp'), cellsize = 0.09 , numpoint = 2)
+y = gridRandom(spatial_object = points4, cellsize = 0.09, numpoint = 2)
 ```
 
 Plot input data and data after random declustering:
