updating website (plots)

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,8 +33,9 @@ This is a basic example of cell declustering:
 
 ```{r example}
 library(declusteringr)
-
-x = gridWeighted(spatial_object = sf::st_read("inst/points/punkty4.shp"), cellsize = 0.09)
+points4 = sf::st_read(system.file("points/punkty4.shp", package = "declusteringr"))
+x = gridWeighted(spatial_object = points4, cellsize = 0.09)
+x
 ```
 Plot input data and weighted points:
 ```{r}
@@ -46,7 +47,7 @@ plot(x$geometry, col = unlist(x$received_weights))
 `gridWeighted` is adding columns row.id - the cell's number, col.id - the point's number, received_weights - the weight of each cell and lengths - amounts of each points in cell. `gridWeighted` does not change amount of features.
 Weights are calculated according to this pattern:
 
-$$ {w}'_j = \frac{\frac{1}{n_i}}{number\;of\;cells\;with\;data}\cdot n $$
+
 
 where $ n_i $ is the number of samples in the cell in which sample $ j $ is located and $ n $ is the total number cells
 with samples.
@@ -54,7 +55,8 @@ with samples.
 This is basic example of random declustering:
 
 ```{r}
-y = gridRandom(spatial_object = sf::st_read('inst/points/punkty4.shp'), cellsize = 0.09 , numpoint = 2)
+y = gridRandom(spatial_object = points4, cellsize = 0.09 , numpoint = 2)
+y
 ```
 
 Plot input data and data after random declustering:
