--- a/README.Rmd
+++ b/README.Rmd
@@ -47,7 +47,7 @@ plot(x$geometry, col = unlist(x$received_weights))
 `gridWeighted` is adding columns row.id - the cell's number, col.id - the point's number, received_weights - the weight of each cell and lengths - amounts of each points in cell. `gridWeighted` does not change amount of features.
 Weights are calculated according to this pattern:
 
-![pattern](cell_decl_pattern.PNG)
+![pattern](man/figures/cell_decl_pattern.PNG)
 
 where ni is the number of samples in the cell in which sample j is located and n is the total number cells
 with samples.
