updating readme and website

--- a/README.Rmd
+++ b/README.Rmd
@@ -94,8 +94,8 @@ plot(y, main = "random declustering",
 
 ## References
 1. Declustering and Debiasing - M. J. Pyrcz (mpyrcz@ualberta.ca) and C. V. Deutsch (cdeutsch@ualberta.ca), Centre for Computational Geostatistics University of Alberta, Edmonton, Alberta, CANADA
-2. Praktyczny poradnik – jak szybko zrozumieć i wykorzystać geostatystykę w pracy badawczej
-Practical guide – How to fast understand and use geostatistics in own research work - prof. UAM Alfred Stach, Uniwersytet im. Adama Mickiewicza w Poznaniu
-3. Cell Declustering Parameter Selection - C. V. Deutsch
-4. Nowosad, J., (2019). Geostatystyka w R. Poznań: Space A. ISBN 978-83-953296-0-9. Online: https://bookdown.org/nowosad/Geostatystyka/
-5. Tobler W. (1970), A Computer Model Simulating Urban Growth in Detroit Region, "Economic Geography" 46(2)
+2. Cell Declustering Parameter Selection - C. V. Deutsch
+3. Nowosad, J., (2019). Geostatystyka w R. Poznań: Space A. ISBN 978-83-953296-0-9. Online: https://bookdown.org/nowosad/Geostatystyka/
+4. Nowosad, J., (2019). Elementarz programisty: wstęp do programowania używając R. Poznań: Space A. Online: https://nowosad.github.io/elp/
+5. Lovelace, Robin & Nowosad, Jakub & Muenchow, Jannes. (2019). Geocomputation with R. 10.1201/9780203730058.
+6. R Packages, H. Wickham, J. Bryan. Online: https://r-pkgs.org/ (2015)
